COMPILE_DEPS = CORE_DEPS + [
    "@minimal_json//jar",
    "//protocols/p4runtime/model:onos-protocols-p4runtime-model",
    "//protocols/p4runtime/api:onos-protocols-p4runtime-api",
    "//drivers/default:onos-drivers-default",
]

osgi_jar(
    suppress_checkstyle = True,
    deps = COMPILE_DEPS,
)

BUNDLES = [
    "//apps/wxyNDNApp/ndnpipeconf:onos-apps-wxyNDNApp-ndnpipeconf",
]

onos_app(
    app_name = "org.onosproject.wxyNDNApp.ndnpipeconf",
    category = "Pipeconf",
    description = "Provides pipeconf for the NDN Test",
    included_bundles = BUNDLES,
    required_apps = [
        "org.onosproject.drivers.p4runtime",
    ],
    title = "P4 NDN Forwarding Pipeconf",
    url = "http://onosproject.org",
)
